# raysense

./: .gitignore  .rayforce-version  .raysense.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  install.sh  raysense-architecture-sensor.md
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/commands/: audit.md  bootstrap.md  drift.md  impact.md  query.md  verify.md
claude-plugin/skills/audit/: SKILL.md
claude-plugin/skills/bootstrap/: SKILL.md
claude-plugin/skills/drift/: SKILL.md
claude-plugin/skills/impact/: SKILL.md
claude-plugin/skills/query/: SKILL.md
claude-plugin/skills/raysense-audit/: SKILL.md
claude-plugin/skills/raysense-bootstrap/: SKILL.md
claude-plugin/skills/raysense-impact/: SKILL.md
claude-plugin/skills/raysense-query/: SKILL.md
claude-plugin/skills/raysense-verify/: SKILL.md
claude-plugin/skills/verify/: SKILL.md
crates/rayforce-sys/: Cargo.toml  build.rs
crates/rayforce-sys/src/: lib.rs
crates/raysense/: Cargo.toml  README.md
crates/raysense-cli/: Cargo.toml
crates/raysense-cli/src/: lib.rs  main.rs  mcp.rs
crates/raysense-core/: Cargo.toml  README.md
crates/raysense-core/src/: facts.rs  graph.rs  health.rs  lib.rs  profile.rs  scanner.rs  simulate.rs
crates/raysense-memory/: Cargo.toml
crates/raysense-memory/src/: lib.rs
crates/raysense/src/: lib.rs  main.rs
examples/: README.md
examples/policies/: change-hotspot.rfl  concentrated-ownership.rfl  no-huge-files.rfl  tightly-coupled-pairs.rfl
examples/sample-data/: coverage.csv  embeddings.csv
site/: README.md  index.html  llms.txt  robots.txt  sitemap.xml  style.css
site/about/: index.html
site/compare/: index.html
src/: baseline.rs  cli.rs  facts.rs  graph.rs  health.rs  install.rs  lib.rs  main.rs  mcp.rs  memory.rs  profile.rs  scanner.rs  simulate.rs  sys.rs  workspace.rs
