[workspace]
members = [
    "crates/rayforce-sys",
    "crates/raysense",
    "crates/raysense-cli",
    "crates/raysense-core",
    "crates/raysense-memory",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
