#   Copyright (c) 2025-2026 Anton Kundenko <singaraiona@gmail.com>
#   All rights reserved.
#
#   Permission is hereby granted, free of charge, to any person obtaining a copy
#   of this software and associated documentation files (the "Software"), to deal
#   in the Software without restriction, including without limitation the rights
#   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#   copies of the Software, and to permit persons to whom the Software is
#   furnished to do so, subject to the following conditions:
#
#   The above copyright notice and this permission notice shall be included in all
#   copies or substantial portions of the Software.
#
#   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#   AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
#   SOFTWARE.

[package]
name = "raysense"
version = "0.9.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/RayforceDB/raysense"
description = "Architectural X-ray for your codebase. Live, local, agent-ready."
readme = "README.md"
links = "rayforce"
# Whitelist files shipped in the published .crate. `vendor/rayforce/**` is
# included even though it's gitignored — CI populates it from upstream
# rayforce at the pinned SHA before `cargo package` runs.
include = [
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "docs/*.svg",
    ".rayforce-version",
    ".raysense.toml",
    # Bundled rayforce source — narrow to just what `make lib` needs.
    # Excludes website/, docs/, test/, examples/, bench/ to keep the
    # published .crate well under the crates.io 10 MiB ceiling.
    "vendor/rayforce/Makefile",
    "vendor/rayforce/LICENSE",
    "vendor/rayforce/include/**/*.h",
    "vendor/rayforce/src/**/*.c",
    "vendor/rayforce/src/**/*.h",
]

[[bin]]
name = "raysense"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
libloading = "0.8"
notify = "8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-language = "0.1"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-swift = "0.7.1"
tree-sitter-typescript = "0.23.2"

# build.rs uses only std + git/make subprocesses; no build-deps.
