[package]
name = "raysense-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "raysense"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rayforce-sys = { path = "../rayforce-sys" }
raysense-core = { path = "../raysense-core" }
raysense-memory = { path = "../raysense-memory" }
serde_json.workspace = true
