[package]
name = "raysense-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core scanner and architectural fact model for Raysense"
readme = "README.md"

[dependencies]
ignore.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
