[package]
name = "raysense-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core scanner and architectural fact model for Raysense"
readme = "README.md"

[dependencies]
ignore.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-rust = "0.24.2"
